site/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-api
spec:
  # replicas: 2
  revisionHistoryLimit: 5
  minReadySeconds: 20
  selector:
    matchLabels:
      app: site-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: site-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: site-api
          image: 289952279049.dkr.ecr.ap-northeast-1.amazonaws.com/site-api
          imagePullPolicy: Always
          ports:
            - containerPort: 3300
          resources:
            requests:
              cpu: "200m"
              memory: "1000Mi"
              ephemeral-storage: "2Gi"
            limits:
              cpu: "500m"
              memory: "1200Mi"
              ephemeral-storage: "3Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 3300
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3300
            initialDelaySeconds: 5
            failureThreshold: 2
            periodSeconds: 10
            timeoutSeconds: 5
      nodeSelector:
        app-key: site
