site/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-api
spec:
  type: NodePort
  selector:
    app: site-api
  ports:
    - port: 3300
      protocol: TCP
